--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,11 @@
+title: Photo Log
+theme: minima
+plugins:
+  - jekyll-feed
 
+defaults:
+  - scope:
+      path: ""
+      type: posts
+    values:
+      layout: post
